syntax = "proto3";

package todo.v1;

option go_package = "todo";

import "google/protobuf/timestamp.proto";

service TodoService {
	rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse) {
	}
}

message Todo {
	uint64 id = 1;
	string title = 2;
	string description = 3;

	// @inject_tag: sql:",notnull,default:false"
	bool completed = 4;

	// @inject_tag: sql:"type:timestamptz,default:now()"
	google.protobuf.Timestamp created_at = 5;

	// @inject_tag: sql:"type:timestamptz"
	google.protobuf.Timestamp updated_at = 6;
	string foo = 7;
}

message CreateTodoRequest {
	Todo item = 1;
}

message CreateTodoResponse {
	uint64 id = 1;
}
